--- a/src/app/vaccination-center-list/vaccination-center-list.component.html
+++ b/src/app/vaccination-center-list/vaccination-center-list.component.html
@@ -1,16 +1,56 @@
-<div class="box">
-    <p class="title is-5"><i class="mr-2 fa-solid fa-hospital"></i> Liste des centres de vaccination</p>
-</div>
+<mat-card class="padding separator">
+  <mat-card-title class="separator-d">Liste des centres de vaccination</mat-card-title>
+</mat-card>
 
-<div class="columns is-multiline">
-    <div class="column is-half is-one-quarter-desktop" *ngFor="let aCenter of centers" [ngClass]="selected==aCenter ? 'selected' : ''">
-      <div class="card">
-        <div class="card-content">
-          <p class="title is-5"><a routerLink="/center/{{ aCenter.id }}">{{ aCenter.name }}</a></p>
-        </div>  
-        <footer class="card-footer has-background-link">
-          <a class="card-footer-item has-text-light">Prendre un rendez-vous</a>
-        </footer>
-      </div>
-    </div>
-</div>
+<mat-form-field>
+  <mat-label>Filtrer</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Prouvé" #input>
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> Id. </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Nom du centre </th>
+    <td mat-cell *matCellDef="let element"> 
+      <button color="primary" mat-raised-button routerLink="/center/{{ element.id }}">{{element.name}}</button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef> Adresse </th>
+    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="postalCode">
+    <th mat-header-cell *matHeaderCellDef> Code postal </th>
+    <td mat-cell *matCellDef="let element"> {{element.postalCode}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="city">
+    <th mat-header-cell *matHeaderCellDef> Ville </th>
+    <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let element">
+      <button color="accent" mat-raised-button><mat-icon>today</mat-icon> Prendre un rendez-vous</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">
+      <a mat-button class="margin">
+        Aucun centre trouvé en appliquant le filtre "{{ input.value }}"
+      </a>
+    </td>
+  </tr>
+</table>
