💄 [ending migration to material]

--- a/src/app/board-superadmin/board-superadmin.component.html
+++ b/src/app/board-superadmin/board-superadmin.component.html
@@ -1,90 +1,78 @@
-<div class="box">
-  <p class="title is-5">Formulaire de création d'un centre de vaccination</p>
-</div>
+<mat-card class="padding">
+  <mat-card-title class="separator">Tableau de bord</mat-card-title>
 
-<div class="box">
-  <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+  <mat-accordion class="separator">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon>add_box</mat-icon>&nbsp; Ajout d'un centre de vaccination
+        </mat-panel-title>
+        <mat-panel-description>
+          Formulaire d'ajout d'un centre de vaccination
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      
+      <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
-    <div class="field">
-      <label class="label" for="name">Nom du centre</label>
-      <div class="control has-icons-left has-icons-right">
-        <input class="input" type="text" placeholder="Nom du centre" name="name" [(ngModel)]="form.name" required
-          autofocus #name="ngModel" [ngClass]="{ 'is-danger': f.submitted && name.errors }">
-        <span class="icon is-small is-left">
-          <i class="fas fa-hospital"></i>
-        </span>
-        <span class="icon is-small is-right" *ngIf="name.errors && f.submitted">
-          <i class="fas fa-exclamation-triangle"></i>
-        </span>
-      </div>
-      <p class="help is-danger" *ngIf="name.errors && f.submitted">Le nom du centre est requis</p>
-    </div>
+        <mat-form-field>
+          <mat-label>Nom du centre</mat-label>
+          <input matInput required name="name" placeholder="Ex: Centre des congès Prouvé" [(ngModel)]="form.name" #name="ngModel">
+          <mat-icon matPrefix>local_hospital</mat-icon>
+          <mat-icon matSuffix *ngIf="name.errors && f.submitted">warning</mat-icon>
+          <mat-error *ngIf="name.errors && name.errors['required']">Le nom du centre est requis.</mat-error>
+        </mat-form-field>
 
-    <div class="field">
-      <label class="label" for="address">Adresse postale</label>
-      <div class="control has-icons-left has-icons-right">
-        <input class="input" type="text" placeholder="Adresse postale" name="address" [(ngModel)]="form.address" required
-          autofocus #address="ngModel" [ngClass]="{ 'is-danger': f.submitted && address.errors }">
-        <span class="icon is-small is-left">
-          <i class="fa-solid fa-location-dot"></i>
-        </span>
-        <span class="icon is-small is-right" *ngIf="address.errors && f.submitted">
-          <i class="fas fa-exclamation-triangle"></i>
-        </span>
-      </div>
-      <p class="help is-danger" *ngIf="address.errors && f.submitted">L'adresse du centre est requise</p>
-    </div>
 
-    <div class="field">
-      <div class="field-body">
+        <table class="full-width" cellspacing="0">
+          <tr>
+            <td>   
+              <mat-form-field>
+                <mat-label>Adresse postale</mat-label>
+                <input matInput required placeholder="Ex: 2 bis place Tiers" name="address" [(ngModel)]="form.address" #address="ngModel">
+                <mat-icon matPrefix>map</mat-icon>
+                <mat-icon matSuffix *ngIf="address.errors && f.submitted">warning</mat-icon>
+                <mat-error *ngIf="address.errors && address.errors['required']">L'adresse postale est requise.</mat-error>
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field>
+                <mat-label>Code postal</mat-label>
+                <input required matInput name="postalCode" placeholder="Ex: F-54519 ou 54500" [(ngModel)]="form.postalCode" #postalCode="ngModel"
+                 pattern="(?:F-)??[0-9]{5}" maxlength="7" minlength="5">
+                <mat-icon matPrefix>my_location</mat-icon>
+                <mat-icon matSuffix *ngIf="postalCode.errors && f.submitted">warning</mat-icon>
+                <mat-error *ngIf="postalCode.errors && postalCode.errors['required']">Le code postal est requis.</mat-error>
+                <mat-error *ngIf="postalCode.errors && postalCode.errors['pattern']">Le code postal n'est pas valide.</mat-error>
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field>
+                <mat-label>Ville</mat-label>
+                <input required matInput placeholder="Ex: Nancy" name="city" [(ngModel)]="form.city" #city="ngModel">
+                <mat-icon matPrefix>pin_drop</mat-icon>
+                <mat-icon matSuffix *ngIf="city.errors && f.submitted">warning</mat-icon>
+                <mat-error *ngIf="city.errors && city.errors['required']">La ville est requise.</mat-error>
+              </mat-form-field>
+            </td>
+          </tr>
+        </table>
+    
+        <button mat-raised-button color="primary" class="separator">Créer le centre</button>
+    
+        <mat-card class="separator danger" *ngIf="f.submitted && isCreationFailed">
+          <mat-card-content>Échec de la création du centre : {{ errorMessage }}</mat-card-content>
+        </mat-card>
+    
+      </form>
 
-        <div class="field">
-          <label class="label" for="city">Ville</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" placeholder="Ville" name="city" [(ngModel)]="form.city" required autofocus
-              #city="ngModel" [ngClass]="{ 'is-danger': f.submitted && city.errors }">
-            <span class="icon is-small is-left">
-              <i class="fa-solid fa-map"></i>
-            </span>
-            <span class="icon is-small is-right" *ngIf="city.errors && f.submitted">
-              <i class="fas fa-exclamation-triangle"></i>
-            </span>
-          </div>
-          <p class="help is-danger" *ngIf="city.errors && f.submitted">La ville est requise</p>
-        </div>
+      <mat-card class="separator success" *ngIf="isCreationSuccess">
+        <mat-card-content>      
+          La création du centre a été effectuée avec succès.<br>
+          Vous pouvez consulter la liste des centres en cliquant <a mat-button routerLink="/centers">ici</a>.
+        </mat-card-content>
+      </mat-card>
 
-        <div class="field">
-          <label class="label" for="postalCode">Code postal</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" placeholder="XXXXX ou F-XXXXX" name="postalCode" [(ngModel)]="form.postalCode"
-             pattern="(?:F-)??[0-9]{5}" maxlength="7" minlength="5" required autofocus #postalCode="ngModel" [ngClass]="{ 'is-danger': f.submitted && postalCode.errors }">
-            <span class="icon is-small is-left">
-              <i class="fa-solid fa-map-pin"></i>
-            </span>
-            <span class="icon is-small is-right" *ngIf="postalCode.errors && f.submitted">
-              <i class="fas fa-exclamation-triangle"></i>
-            </span>
-          </div>
-          <p class="help is-danger" *ngIf="postalCode.errors && f.submitted && postalCode.errors['required']">Le code postal est requis</p>
-          <p class="help is-danger" *ngIf="postalCode.errors && f.submitted && postalCode.errors['pattern']">Le code
-            postal
-            n'est pas valide</p>
-        </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 
-      </div>
-    </div>
-
-    <div class="field is-grouped is-grouped-right">
-      <div class="control">
-        <button class="button is-link">Créer le centre</button>
-      </div>
-    </div>
-
-    <div class="notification is-danger" *ngIf="f.submitted && isCreationFailed">Échec de la création du centre : {{ errorMessage }}</div>
-  </form>
-
-  <div class="notification is-success" *ngIf="isCreationSuccess">
-    La création du centre a été effectuée avec succès.<br>
-    Vous pouvez consulter la liste des centres en cliquant <a href="/centers">ici</a>.
-  </div>
-</div>
+</mat-card>
