--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,7 +12,7 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <mat-list>
-        <mat-list-item><div class="with-icon"><mat-icon>face</mat-icon>&nbsp; {{ currentUser.firstName }} {{ currentUser.lastName | uppercase }} - {{ "@" + currentUser.username }}</div></mat-list-item>
+        <mat-list-item><div class="with-icon"><mat-icon>face</mat-icon>&nbsp; {{ currentUser.firstName }} {{ currentUser.lastName | uppercase }} - {{ "@" + currentUser.username }} <mat-icon *ngIf="isSuperAdmin">verified_user</mat-icon></div></mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item><div class="with-icon"><mat-icon>contact_mail</mat-icon>&nbsp; {{ currentUser.email }}</div></mat-list-item>
         <mat-divider></mat-divider>
@@ -102,7 +102,7 @@
         <mat-form-field>
           <mat-label>Numéro de téléphone</mat-label>
           <input matInput name="phone" placeholder="Ex: 123456789" [(ngModel)]="form.phone" #phone="ngModel"
-            maxlength="50" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" pattern="[0-9]{9}" maxlength="9">
+            pattern="[0-9]{9}" maxlength="9">
           <span matTextPrefix>+33 &nbsp;</span>
           <mat-icon matSuffix *ngIf="phone.errors && f.submitted">warning</mat-icon>
           <mat-hint align="start">Ne pas entrer le premier zéro.</mat-hint>
@@ -134,188 +134,3 @@
   </ng-template>
 
 </mat-card>
-
-<!--div class="box">
-  <p class="title is-5"><i class="mr-2 fa-solid fa-user"></i> Mon compte</p>
-</div>
-
-<div class="box content" *ngIf="currentUser; else loggedOut">
-  <p class="title is-5 is-spaced">{{ currentUser.firstName }} {{ currentUser.lastName | uppercase }}</p>
-  <p *ngIf="currentUser.createdOn">Compte créé <span class="tag">{{ currentUser.createdOn | date: 'le dd/MM/yyyy, à
-      HH:mm:ss' }}</span></p>
-  <p *ngIf="currentUser.lastModifiedOn">Dernière modification du compte <span class="tag">{{ currentUser.lastModifiedOn
-      | date: 'le dd/MM/yyyy, à HH:mm:ss' }}</span></p>
-
-  <div class="tags has-addons are-medium pt-3">
-    <span class="tag">Nom d'utilisateur</span>
-    <span class="tag is-link">{{ "@" + currentUser.username }}</span>
-  </div>
-
-  <div class="tags has-addons are-medium">
-    <span class="tag">Email</span>
-    <span class="tag is-info">{{ currentUser.email }}</span>
-  </div>
-
-  <div class="tags has-addons are-medium">
-    <span class="tag">Téléphone</span>
-    <span class="tag is-dark">+33</span>
-    <span class="tag is-warning">{{ currentUser.phone }}</span>
-  </div>
-
-  <div class="tags has-addons are-medium">
-    <span class="tag">Rôles</span>
-    <span *ngFor="let role of currentUser.roles" class="tag is-success">{{ role }}</span>
-  </div>
-
-</div>
-
-<div class="box mt-6" *ngIf="currentUser; else loggedOut">
-  <p class="title is-5"><i class="mr-2 fa-solid fa-user-gear"></i> Formulaire de modification du compte</p>
-</div>
-
-<div class="box" *ngIf="currentUser; else loggedOut">
-  <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-    <div class="field">
-      <div class="field-body">
-
-        <div class="field">
-          <label class="label" for="firstName">Prénom</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" placeholder="{{ currentUser.firstName }}" name="firstName"
-              [(ngModel)]="form.firstName" autofocus #firstName="ngModel"
-              [ngClass]="{ 'is-danger': f.submitted && firstName.errors }">
-            <span class="icon is-small is-left">
-              <i class="fa-solid fa-address-card"></i>
-            </span>
-            <span class="icon is-small is-right" *ngIf="firstName.errors && f.submitted">
-              <i class="fas fa-exclamation-triangle"></i>
-            </span>
-          </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="lastName">Nom de famille</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" placeholder="{{ currentUser.lastName | uppercase }}" name="lastName"
-              [(ngModel)]="form.lastName" autofocus #lastName="ngModel"
-              [ngClass]="{ 'is-danger': f.submitted && lastName.errors }">
-            <span class="icon is-small is-left">
-              <i class="fa-solid fa-signature"></i>
-            </span>
-            <span class="icon is-small is-right" *ngIf="lastName.errors && f.submitted">
-              <i class="fas fa-exclamation-triangle"></i>
-            </span>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="field">
-      <label class="label" for="username">Nom d'utilisateur</label>
-      <div class="control has-icons-left has-icons-right">
-        <input class="input" type="text" placeholder="{{ currentUser.username }}" name="username" minlength="3"
-          maxlength="20" disabled>
-        <span class="icon is-small is-left">
-          <i class="fas fa-user"></i>
-        </span>
-        <span class="icon is-small is-right">
-          <i class="fas fa-exclamation-triangle"></i>
-        </span>
-      </div>
-      <p class="help">Le nom
-        d'utilisateur d'un profil n'est pas modifiable</p>
-    </div>
-
-    <div class="field">
-      <div class="field-body">
-
-        <div class="field">
-          <label class="label" for="email">Adresse email</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="email" placeholder="{{ currentUser.email }}" name="email"
-              [(ngModel)]="form.email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" maxlength="50"
-              #email="ngModel" [ngClass]="{ 'is-danger': f.submitted && email.errors }">
-            <span class="icon is-small is-left">
-              <i class="fas fa-envelope"></i>
-            </span>
-            <span class="icon is-small is-right" *ngIf="email.errors && f.submitted">
-              <i class="fas fa-exclamation-triangle"></i>
-            </span>
-          </div>
-          <p class="help is-danger" *ngIf="email.errors && f.submitted && email.errors['pattern']">L'adresse email
-            entrée
-            n'est pas valide</p>
-          <p class="help is-danger" *ngIf="email.errors && f.submitted && email.errors['maxlength']">L'adresse email ne
-            doit pas contenir plus de 50 caractères</p>
-        </div>
-
-        <div class="field">
-          <label class="label" for="phone">Numéro de téléphone</label>
-          <div class="field has-addons">
-            <p class="control">
-              <a class="button is-static">
-                +33
-              </a>
-            </p>
-            <p class="control is-expanded">
-
-              <input class="input" type="tel" placeholder="{{ currentUser.phone }}" name="tel" [(ngModel)]="form.phone"
-                #phone="ngModel" [ngClass]="{ 'is-danger': f.submitted && phone.errors }" pattern="[0-9]{9}"
-                minlength="9" maxlength="9">
-
-            </p>
-          </div>
-          <p class="help" *ngIf="!f.submitted || !phone.errors">Ne pas entrer le premier zéro</p>
-          <p class="help is-danger"
-            *ngIf="phone.errors && f.submitted && (phone.errors['minlength'] || phone.errors['maxlength'] || phone.errors['pattern'])">
-            Le numéro de téléphone
-            n'est pas au bon format</p>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="field">
-      <label class="label" for="password">Nouveau mot de passe</label>
-      <div class="control has-icons-left has-icons-right">
-        <input class="input" type="password" placeholder="Nouveau mot de passe" name="password"
-          [(ngModel)]="form.password" minlength="6" maxlength="40" #password="ngModel"
-          [ngClass]="{ 'is-danger': f.submitted && password.errors }">
-        <span class="icon is-small is-left">
-          <i class="fas fa-lock"></i>
-        </span>
-        <span class="icon is-small is-right" *ngIf="password.errors && f.submitted">
-          <i class="fas fa-exclamation-triangle"></i>
-        </span>
-      </div>
-      <p class="help" *ngIf="!f.submitted || !password.errors">Ne pas compléter ce champ si vous ne souhaitez pas
-        modifier votre mot de passe</p>
-      <p class="help is-danger" *ngIf="password.errors && f.submitted && password.errors['minlength']">Le mot de passe
-        doit contenir au minimum 6
-        caractères</p>
-      <p class="help is-danger" *ngIf="password.errors && f.submitted && password.errors['maxlength']">Le mot de passe
-        ne doit pas contenir plus de 40 caractères</p>
-    </div>
-
-    <div class="field is-grouped is-grouped-right">
-      <div class="control">
-        <button class="button is-link">Modifier</button>
-      </div>
-    </div>
-
-    <div class="notification is-danger" *ngIf="f.submitted && isEditProfileFailed">Échec de la modification : {{
-      errorMessage
-      }}</div>
-  </form>
-
-  <div class="notification is-success" *ngIf="isSuccessful">
-    La modification de votre compte a été effectuée avec succès, déconnexion de votre compte en cours...
-  </div>
-</div>
-
-<ng-template #loggedOut>
-  <div class="notification is-danger">
-    Veuillez vous connecter pour accéder à cette page.
-  </div>
-</ng-template-->
